Solve anormalous clipping in print

--- a/resources/banana.css
+++ b/resources/banana.css
@@ -608,4 +608,9 @@ span.btex-diagram .katex span.rlap {
     .nomobile {
         display: none
     }
+
+    .btex-output span.display-math span.katex-display {
+        overflow-x: visible;
+        overflow-y: visible;
+    }
 }
